# report_maker_API

./: .gitignore  README.md  cli.py  docker-compose.yml  dockerfile  pyproject.toml  test.db
postman/: collection.json
src/: database_manager.py  handler.py  logger.py  main.py  settings.py
src/clients/: github_client.py  jira_client.py  open_ai.py  slack_client.py
src/clients/parser/: data_formatter.py  filter.py  github_parser.py  jira_parser.py  openai_parser.py  tasks_parser.py
src/db/: database.py
src/handlers.py/: handler.py
src/models/: task.py
tests/: fixtures.py  github_example.json  jira_data.json  test_parsers.py
