[tool.poetry]
name = "Report Maker"
version = "0.1.0"
description = ""
authors = ["Matias Zulberti <matiaszulberti@gmaill.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlmodel = "^0.0.4"
requests = "^2.32.3"
openai = "^1.55.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"